--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,12 @@ _site/
 .jekyll-cache/
 .jekyll-metadata
 
-# macOS
+# OS generated files #
+######################
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
