--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; 2014-2021 Pulzze Systems, Inc (D.B.A Interactor)"
+footer_content: "Copyright &copy; 2022 Pulzze Systems, Inc (D.B.A Interactor)"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
